--- a/waybar/style.css
+++ b/waybar/style.css
@@ -12,9 +12,8 @@ window#waybar {
 
 #custom-arch, #workspaces {
   border-radius: 10px;
-  background-color: #11111b;
-  color: #b4befe;
-  margin-top: 5px;
+  background-color: rgba(119, 135, 239, 0.4);
+  margin-top: 3px;
   margin-right: 15px;
   padding-top: 1px;
   padding-left: 10px;
@@ -24,22 +23,26 @@ window#waybar {
 #custom-arch {
   font-size: 20px;
   margin-left: 15px;
-  color: #b4befe;
+    color: #11111b;
 }
 
 #workspaces button {
-  background: #11111b;
-  color: #b4befe;
+    color: #11111b;
 }
 
 #clock, #backlight, #pulseaudio, #bluetooth, #network, #battery{
   border-radius: 10px;
-  background-color: #11111b;
-  color: #cdd6f4;
-  margin-top: 5px;
+  background-color: rgba(119, 135, 239, 0.65);
+  color: #11111b;
+  margin-top: 3px;
   padding-left: 10px;
   padding-right: 10px;
   margin-right: 15px;
+}
+
+#network {
+    padding-right: 1px;
+  margin-right: 5px;
 }
 
 #backlight, #bluetooth {
