--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     border: none;
-    font-family: 'Fira Code', 'Symbols Nerd Font Mono';
+    font-family: 'Fira Code', 'FiraCode Nerd Font Propo';
     font-size: 18px;
     font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
     min-height: 23px;
