--- a/swaync/style.css
+++ b/swaync/style.css
@@ -22,7 +22,10 @@
 
 .control-center {
     background: rgba(29, 32, 33, 0.9);
-    box-shadow: 4px 4px 2px 3px rgba(134, 163, 246, 0.8),
-                0px 0px 2px 2px rgba(151, 191, 245, 1);
+    border: 2px solid rgba(134, 163, 246, 0.8);
     border-radius: 15px;
+}
+
+:root {
+    --mpris-album-art-icon-size: 96px;
 }
